Manual access request added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
 </body>
     <script>
+        alert("Please allow location(GPS) in your mobile device manually");
         const map = L.map('map');
         // Initializes map
         map.setView([10.04846, 76.33125], 18);
