Manual access request-2

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
         function error(err) {
             if (err.code === 1) {
-                alert("Please allow geolocation access");
+                alert("Please allow geolocation(GPS) access in your mobile device manually");
             } else {
                 alert("Cannot get current location");
             }
