--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <div class="container mx-auto p-4">
         <div id="map" class="w-full h-64 md:h-96 lg:h-400"></div>
     </div>
-</body>
     <script>
         const map = L.map('map');
         // Initializes map
@@ -60,12 +59,18 @@
         function error(err) {
             if (err.code === 1) {
                 alert("Please allow geolocation(GPS) access in your mobile device manually");
+                // Uncomment the following line to open Android location settings
+                // openAndroidLocationSettings();
             } else {
                 alert("Cannot get current location");
             }
         }
+
+        // Function to open Android location settings
+        function openAndroidLocationSettings() {
+            window.location.href = 'intent:#Intent;action=android.settings.LOCATION_SOURCE_SETTINGS;end';
+        }
     </script>
-
-
+</body>
 
 </html>
